支持jar包依赖和pom依赖